Fixed no-wrap issue

--- a/BeRated.Web/Stylesheets/Layout.less
+++ b/BeRated.Web/Stylesheets/Layout.less
@@ -61,7 +61,9 @@ li {
         vertical-align: top;
         border-top: @border;
     }
+}
 
+.dateGrid {
     td:nth-child(1) {
         white-space: nowrap;
     }
